# logass

./: Cargo.toml  LICENSE  README.en.md  README.md
plugins/: color.json  ignore.json
src/: log.rs  main.rs  output.rs
src/plugins/: color.rs  ignore.rs  line_num.rs  mod.rs  processor.rs
src/plugins/model/: mod.rs
src/readers/: filesource.rs  mod.rs  stdinput.rs
